--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Emerging Trends In Politics</h1>
+    <h1>Emerging Trends In Politics!</h1>
     <img src="internationalpolitics.jpg" alt="internationalpolitics.jpg">
   <div class="">
 
